--- a/site/views/detail.ejs
+++ b/site/views/detail.ejs
@@ -78,43 +78,43 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-12 descripcion">
-							<p><%- product.description%></p>
+							<p><%- product.description %></p>
 						</div>
 						<section class="col-12 especificaciones">
 							<table class="table table-sm table-dark tabla-especificaciones">
 
 								<tbody>
 									<tr>
-										<td class="title-table">varietal</td>
-										<td class="contenido-table"><%- feature.varietal%></td>
+										<td class="title-table">Varietal</td>
+										<td class="contenido-table"><%- feature.varietal %></td>
 									</tr>
 									<tr>
-										<td class="title-table">añada</td>
-										<td class="contenido-table"><%- feature.añada %></td>
-									</tr>
-
-									<tr>
-										<td class="title-table">tipo de barrica</td>
-										<td class="contenido-table"><%- feature.barrica%></td>
+										<td class="title-table">Añada</td>
+										<td class="contenido-table"><%- feature.vintage %></td>
 									</tr>
 
 									<tr>
-										<td class="title-table">tiempo en barrica</td>
-										<td class="contenido-table"><%-feature.tiempo%> Meses</td>
+										<td class="title-table">Tipo de barrica</td>
+										<td class="contenido-table"><%- feature.type_of_barrel %></td>
 									</tr>
 
 									<tr>
-										<td class="title-table">tipo de cosecha</td>
-										<td class="contenido-table"><%-feature.tipoCosecha%></td>
-									</tr>
-									<tr>
-										<td class="title-table">terroir</td>
-										<td class="contenido-table"><%-feature.terroir%></td>
+										<td class="title-table">Tiempo en botella</td>
+										<td class="contenido-table"><%-feature.time_in_bottle %> Meses</td>
 									</tr>
 
 									<tr>
-										<td class="title-table">finca</td>
-										<td class="contenido-table"><%- feature.finca%></td>
+										<td class="title-table">Tipo de cosecha</td>
+										<td class="contenido-table"><%-feature.harvest %></td>
+									</tr>
+									<tr>
+										<td class="title-table">Terroir</td>
+										<td class="contenido-table"><%-feature.terroir %></td>
+									</tr>
+
+									<tr>
+										<td class="title-table">Finca</td>
+										<td class="contenido-table"><%- feature.finca %></td>
 									</tr>
 								</tbody>
 							</table>
