--- a/site/views/Admin/productList.ejs
+++ b/site/views/Admin/productList.ejs
@@ -28,8 +28,12 @@
        Tinto
        <% } else { %>   
         Blanco
-      <% } %>        
-      <div class="btn-edit-admin"><a href="/admin/products/edit/<%- product.id %>">Editar</a></div>
+      <% } %>
+
+      
+      <div class="container-btn-delete"><form action="/admin/products/edit/<%- product.id %>" method="GET">
+        <input type="submit" class="btn-edit-admin" value="Editar"></form></div>
+      
       <div class="container-btn-delete"><form action="/admin/products/delete/<%- product.id %>?_method=DELETE " method="POST">
         <input type="submit" class="btn-delete-admin" value="Eliminar"></form></div>
 
