--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -110,14 +110,15 @@
                         </h2>
                         <div class="precio">
                           <% if (product.discount> 0) { %>
-                          <span class="precio-real">$<%- toThousand(product.price) %> </span>
-                          <% } %>
-                          <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price / 100 * product.discount)) %> </span>
+                            <span class="precio-real">$<%- toThousand(product.price) %> </span>
+                            <% } %>
+                              <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price / 100 *
+                                  product.discount)) %> </span>
                         </div>
                         <div class="button-agregar">
                           <form action="/products/detail/<%- product.id %>" method="GET">
-                          <button type="submit" class="button-compra">Agregar</button>
-                        </form>
+                            <button type="submit" class="button-compra">Agregar</button>
+                          </form>
                         </div>
                       </article>
             </section>
@@ -137,7 +138,7 @@
             totam
             fugiat aspernatur repudiandae ipsum. Perspiciatis aliquam dolorem cum illum beatae necessitatibus laudantium
             laborum nihil illo veritatis.</p>
-          
+
         </div>
       </section>
 
@@ -152,197 +153,76 @@
 
 
 
-      <!--CARRUSEL PRODUCTOS VINOS TINTOS-->
-      <div class="container-flex ">
+     
 
-        <div class="row caja-display2">
-          <div class="vino-b col-lg-6">
-            <img src="/images/vinot.jpg" alt="">
-            <div class="centrado">
-              <h2>nuestros malbec</h2>
-            </div>
-          </div>
-          <div class="col-8 col-md-6 col-lg-3 ">
 
-            <div id="carouselExampleIndicators" class="carousel slide carrusel" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <section class="d-block w-80 producto-box">
-                    <figure class="imagen-producto">
-                      <img src="/images/producto1.png" alt="">
-                    </figure>
-                    <div class="envio-promo"><span>Envio gratis</span></div>
-                    <div class="descuento"><span> 10 % OFF </span></div>
+
+  <div class="contenedor">
+     <div class="carousel">
+    <div class="carousel__contenedor">
+      <button aria-label="Anterior" class="carousel__anterior">
+        <i class="fas fa-chevron-left"></i>
+      </button>
+    
+      <div class="carousel__lista">
+        <% masVendidos.forEach(product=> { %>
+        <div class="carousel__elemento">
+          <section class="producto-box">
+            <figure class="imagen-producto">
+              <img src="/images/<%- product.image %> " alt="">
+            </figure>
+            <% if (product.free_shipping> 0) { %>
+              <div class="envio-promo"><span>Envio gratis</span></div>
+              <% } %>
+                <% if (product.discount> 0) { %>
+                  <div class="descuento"><span>
+                      <%- product.discount %> % OFF
+                    </span></div>
+                  <% } %>
                     <article class="datos-articulo">
                       <h2>
-                        Famiglia Bianchi Malbec
+                        <%-product.title%>
                       </h2>
                       <div class="precio">
-                        <span class="precio-real">$2000</span>
-                        <span class="precio-desc">$1800</span>
+                        <% if (product.discount> 0) { %>
+                        <span class="precio-real">$<%- toThousand(product.price) %> </span>
+                        <% } %>
+                        <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price / 100 * product.discount)) %> </span>
                       </div>
                       <div class="button-agregar">
-                        <button type="button" class="button-compra">Agregar</button>
+                        <form action="/products/detail/<%- product.id %>" method="GET">
+                        <button type="submit" class="button-compra">Agregar</button>
+                      </form>
                       </div>
                     </article>
-                  </section>
-                </div>
-
-                              
-
-                <% vinosTintos.forEach(product=> { %>
-                <div class="carousel-item">
-                  <section class="d-block w-80 producto-box">
-                    <figure class="imagen-producto">
-                      <img src="/images/<%- product.image %> " alt="">
-                    </figure>
-                    <% if (product.free_shipping> 0) { %>
-                      <div class="envio-promo"><span>Envio gratis</span></div>
-                      <% } %>
-                        <% if (product.discount> 0) { %>
-                          <div class="descuento"><span>
-                              <%- product.discount %> % OFF
-                            </span></div>
-                          <% } %>
-                            <article class="datos-articulo">
-                              <h2>
-                                <%-product.title%>
-                              </h2>
-                              <div class="precio">
-                              <% if (product.discount> 0) { %>
-                              <span class="precio-real">$<%- toThousand(product.price) %> </span>
-                              <% } %>
-                              <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price / 100 * product.discount)) %> </span>
-                            </div>
-                              <div class="button-agregar">
-                                <button type="button" class="button-compra"><a href="/products/detail/<%- product.id %>">Agregar</a></button>
-                              </div>
-                            </article>
-                  </section>
-                </div>
-                <% }) %>
-
-
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
-
+          </section>
         </div>
+        <% }) %>
       </div>
+      </div>
+
+      <button aria-label="Siguiente" class="carousel__siguiente">
+        <i class="fas fa-chevron-right"></i>
+      </button>
+    </div>
+
+    <div role="tablist" class="carousel__indicadores"></div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
 
 
 
       <!--CARRUSEL PRODUCTOS VINOS TINTOS-->
 
-
-
-      <div class="col-12 titulo">
-        <div class="col-12 lines-effect">
-          <h2>Vinos Blancos</h2>
-        </div>
-      </div>
-
-
-      <!--CARRUSEL PRODUCTOS VINOS TINTOS-->
-      <div class="container-flex ">
-
-        <div class="row caja-display">
-
-          <div class="col-8 col-md-6 col-lg-3">
-            <div id="carouselExampleIndicators" class="carousel slide carrusel" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <section class="d-block w-80 producto-box">
-                    <figure class="imagen-producto">
-                      <img src="/images/producto1.png" alt="">
-                    </figure>
-                    <div class="envio-promo"><span>Envio gratis</span></div>
-                    <div class="descuento"><span> 10 % OFF </span></div>
-                    <article class="datos-articulo">
-                      <h2>
-                        Famiglia Bianchi Malbec
-                      </h2>
-                      <div class="precio">
-                        <span class="precio-real">$2000</span>
-                        <span class="precio-desc">$1800</span>
-                      </div>
-                      <div class="button-agregar">
-                        <button type="button" class="button-compra">Agregar</button>
-                      </div>
-                    </article>
-                  </section>
-                </div>
-
-                 <% vinosBlancos.forEach(product=> { %>
-                <div class="carousel-item">
-                  <section class="d-block w-80 producto-box">
-                    <figure class="imagen-producto">
-                      <img src="/images/<%- product.image %> " alt="">
-                    </figure>
-                    <% if (product.free_shipping> 0) { %>
-                      <div class="envio-promo"><span>Envio gratis</span></div>
-                      <% } %>
-                        <% if (product.discount> 0) { %>
-                          <div class="descuento"><span>
-                              <%- product.discount %> % OFF
-                            </span></div>
-                          <% } %>
-                            <article class="datos-articulo">
-                              <h2>
-                                <%-product.title%>
-                              </h2>
-                              <div class="precio">
-                          <% if (product.discount> 0) { %>
-                          <span class="precio-real">$<%- toThousand(product.price) %> </span>
-                          <% } %>
-                          <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price / 100 * product.discount)) %> </span>
-                        </div>
-                              <div class="button-agregar">
-                                <button type="button" class="button-compra"><a href="/products/detail/<%- product.id %>">Agregar</a></button>
-                              </div>
-                            </article>
-                  </section>
-                </div>
-                <% }) %>
-
-
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
-          <div class="vino-b col-lg-6">
-            <img src="/images/vinob.jpg" alt="">
-            <div class="centrado">
-              <h2>vinos blancos</h2>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <!--CARRUSEL PRODUCTOS VINOS TINTOS-->
 
@@ -356,16 +236,82 @@
             totam
             fugiat aspernatur repudiandae ipsum. Perspiciatis aliquam dolorem cum illum beatae necessitatibus laudantium
             laborum nihil illo veritatis.</p>
-          
+
         </div>
       </section>
 
 
       <!--Reseña-->
 
+
+
+
+      <div class="col-12 titulo">
+        <div class="col-12 lines-effect">
+          <h2>Vinos Blancos</h2>
+        </div>
+      </div>
+
+      <div class="contenedor">
+        <div class="carousel">
+       <div class="carousel__contenedor2">
+         <button aria-label="Anterior" class="carousel__anterior2">
+           <i class="fas fa-chevron-left"></i>
+         </button>
+       
+         <div class="carousel__lista2">
+           <% masVendidos.forEach(product=> { %>
+           <div class="carousel__elemento2">
+             <section class="producto-box">
+               <figure class="imagen-producto">
+                 <img src="/images/<%- product.image %> " alt="">
+               </figure>
+               <% if (product.free_shipping> 0) { %>
+                 <div class="envio-promo"><span>Envio gratis</span></div>
+                 <% } %>
+                   <% if (product.discount> 0) { %>
+                     <div class="descuento"><span>
+                         <%- product.discount %> % OFF
+                       </span></div>
+                     <% } %>
+                       <article class="datos-articulo">
+                         <h2>
+                           <%-product.title%>
+                         </h2>
+                         <div class="precio">
+                           <% if (product.discount> 0) { %>
+                           <span class="precio-real">$<%- toThousand(product.price) %> </span>
+                           <% } %>
+                           <span class="precio-desc">$<%- toThousand(product.price - Math.round(product.price / 100 * product.discount)) %> </span>
+                         </div>
+                         <div class="button-agregar">
+                           <form action="/products/detail/<%- product.id %>" method="GET">
+                           <button type="submit" class="button-compra">Agregar</button>
+                         </form>
+                         </div>
+                       </article>
+             </section>
+           </div>
+           <% }) %>
+         </div>
+         </div>
+   
+         <button aria-label="Siguiente" class="carousel__siguiente2">
+           <i class="fas fa-chevron-right"></i>
+         </button>
+       </div>
+   
+       <div role="tablist" class="carousel__indicadores2"></div>
+     </div>
+   </div>
+   
+      
+
       <!-- footer -->
       <%- include('partials/footer') %>
         <!-- /footer -->
+        
+       
   </body>
 
 </html>
