--- a/site/views/partials/head.ejs
+++ b/site/views/partials/head.ejs
@@ -9,7 +9,12 @@
   <!-- Bootstrap Grid Stylesheet -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <!-- Own Stylesheet -->
+  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
+  
+  
+    <!-- Own Stylesheet -->
   <link rel="stylesheet" href="/stylesheets/style.css">
   
 </head>
