--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -7,7 +7,7 @@
 @import 'detailProduct.css';
 @import 'carruselVinosTintos.css';
 @import 'carruselVinosBlancos.css';
-
+@import 'modal.css';
 
 /*VARIABLES*/
 
@@ -824,3 +824,6 @@ ul {
 
 
 }
+
+
+
