--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -9,6 +9,20 @@
       <!-- /Header -->
 
 
+<div class="modal-container">
+  <div class="modal modal-close">
+    <p class= "close2">X</p>
+    <img src="images/modal.svg" alt="">
+    <div class="modal-textos">
+      <h2>Bienvenidos a Eclipse Web Site</h2>
+      <p>Debe ser mayor de edad para efectuar compras</p>
+    </div>
+
+  </div>
+</div>
+
+
+
 
       <!--CAROUSEL-->
 
