--- a/site/views/partials/footer.ejs
+++ b/site/views/partials/footer.ejs
@@ -94,3 +94,4 @@ crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 <script src="/javascripts/carousel.js"></script>
 <script src="/javascripts/carusel2.js"></script>
+<script src="/javascripts/modal.js"></script>
